--- a/platformio.ini
+++ b/platformio.ini
@@ -12,11 +12,17 @@
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
-platform_packages = 
-    platformio/tool-esptoolpy
 lib_deps =
     ; ArduinoJson
     CAN
 monitor_speed = 115200
 ; board_build.flash_mode = qio
 
+[env:nodemcu-32s]
+platform = espressif32
+board = nodemcu-32s
+framework = arduino
+lib_deps =
+    ; ArduinoJson
+    CAN
+monitor_speed = 115200
