--- a/platformio.ini
+++ b/platformio.ini
@@ -16,13 +16,13 @@ lib_deps =
     ; ArduinoJson
     CAN
 monitor_speed = 115200
-; board_build.flash_mode = qio
+board_build.flash_mode = dio
 
-[env:nodemcu-32s]
-platform = espressif32
-board = nodemcu-32s
-framework = arduino
-lib_deps =
-    ; ArduinoJson
-    CAN
-monitor_speed = 115200
+; [env:nodemcu-32s]
+; platform = espressif32
+; board = nodemcu-32s
+; framework = arduino
+; lib_deps =
+;     ; ArduinoJson
+;     CAN
+; monitor_speed = 115200
