Refactor motor control logic and update pin assignments

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,6 +16,10 @@ lib_deps =
     ; ArduinoJson
     CAN
 monitor_speed = 115200
+monitor_filters =
+    --send_on_enter
+    --echo 
+    --eol 
 board_build.flash_mode = dio
 
 ; [env:nodemcu-32s]
