Enhance serial communication setup and adjust task delays for improved responsiveness

--- a/platformio.ini
+++ b/platformio.ini
@@ -21,6 +21,9 @@ monitor_filters =
     --echo 
     --eol 
 board_build.flash_mode = dio
+board_build.f_cpu = 240000000L
+upload_speed = 2000000
+
 
 ; [env:nodemcu-32s]
 ; platform = espressif32
