Refactor motor PID handling for improved control

--- a/platformio.ini
+++ b/platformio.ini
@@ -20,7 +20,7 @@ monitor_filters =
     --send_on_enter
     --echo 
     --eol 
-board_build.flash_mode = dio
+board_build.flash_mode = qio
 board_build.f_cpu = 240000000L
 upload_speed = 2000000
 
