Update motor speed controller parameters and enhance serial communication logic

--- a/platformio.ini
+++ b/platformio.ini
@@ -23,7 +23,7 @@ monitor_filters =
 board_build.flash_mode = qio
 board_build.f_cpu = 240000000L
 upload_speed = 2000000
-
+extra_scripts = post:/home/sunrise/Documents/HelloBalls/src/post_flash.sh
 
 ; [env:nodemcu-32s]
 ; platform = espressif32
